# deltax

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  PERF_IMPROVEMENTS.md  README.md  VECTORIZE.md  packaging.mk  pg_deltax.control  pg_seaturtle.control  test_batch_qual.sql  test_minmax_multi.sql
.github/workflows/: pr-tests.yml  release.yml
clickbench/: Makefile  bench-concurrent.sh  bench-full.sh  benchmark.sh  build-result.py  capture_results.sh  launch-ec2.sh  parse-results.sh  queries-only.sh  reference.sh  reference_results.json  run.sh  verify_results.py
dev/docs/: AGG_SPLIT.md  ARCHITECTURE.md  BLOB_CACHE.md  CLEANUP_LOG.md  CLEANUP_PLAN.md  COLUMNAR_STORAGE.md  CORRECTNESS_TESTING.md  (+6 more)
docker/: Dockerfile  Dockerfile.coverage  Dockerfile.dev  entrypoint.sh
docs/: CONFIGURATION.md  FUNCTIONS.md  LOGICAL_REPLICATION.md  SCHEMA_CHANGES.md
jsonbench/: Makefile  benchmark.sh  create.sql  launch-ec2.sh  parse-results.sh  queries.sql  run.sh
rtabench/: Makefile  README.md  benchmark.sh  fetch-competitors.py  generate-report.py  run.sh
src/: bloom.rs  catalog.rs  compress.rs  copy.rs  copyparquet.rs  copyparse.rs  ddl.rs  lib.rs  partition.rs  stats.rs  timeparse.rs  worker.rs
test-stubs/: stubs.c
tests/: bench_clickbench.py  bench_clickbench_timescaledb.py  bench_compare.py  bench_compression.py  clickbench_data.py  clickbench_queries.py  conftest.py  rtabench_data.py  test_blob_cache.py  test_compression.py  test_direct_backfill.py  test_functions.py  test_jsonb_extract.py  test_logical_replication.py  test_meta_agg.py  test_parallel_scan.py  test_parquet_load.py  test_partitioning.py  test_pg_statistic.py  test_quickstart.py  test_rtabench_correctness.py  test_schema_changes.py  test_valbitmap.py  test_worker.py
(+51 files in other folders)
