[package]
name = "pg_deltax"
version = "0.1.0"
edition = "2024"
resolver = "3"
license = "Apache-2.0"
description = "PostgreSQL time-series extension with Gorilla compression"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_deltax"
path = "src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz4_flex = "0.11"
memchr = "2"
hashbrown = "0.15"
ahash = "0.8"
cardinality-estimator = "1.0"

[dev-dependencies]
pgrx-tests = "0.17"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
